--- a/index.html
+++ b/index.html
@@ -3,162 +3,48 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BrandRadar.shop</title>
+  <title>BrandRadar | Oppdag produkter og trender</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- =====================================
-       HEADER
-       ===================================== -->
-  <header class="main-header">
-    <div class="header-inner">
-      <div class="logo">BrandRadar</div>
+  <div id="header-placeholder"></div>
 
-      <div class="search-box">
-        <input type="text" placeholder="Søk produkter eller merker..." />
-        <button>🔍</button>
-      </div>
-
-      <nav class="main-nav">
-        <a href="index.html" class="active">Home</a>
-        <a href="news.html">News</a>
-        <a href="brands.html">Brands</a>
-        <a href="favoritter.html">Favoritter</a>
-      </nav>
-    </div>
-  </header>
-
-
-  <!-- =====================================
-       NAVIGASJON + MEGA-MENY
-       ===================================== -->
-  <div class="nav-wrap">
-
-    <!-- CATEGORY BAR -->
-    <div class="nav-categories">
-      <ul class="nav-links">
-        <li class="nav-item" data-target="clothing">Clothing</li>
-        <li class="nav-item" data-target="shoes">Shoes</li>
-        <li class="nav-item" data-target="supplements">Supplements</li>
-      </ul>
-    </div>
-
-   <!-- ================================
-     MEGA MENU – FULLY LINKED VERSION
-     ================================ -->
-<div class="mega-menu" id="mega-menu">
-
-  <!-- CLOTHING -->
-  <div class="mega-content" id="clothing">
-    <div class="column">
-      <h4>Men</h4>
-      <a href="category.html?category=clothing&gender=men&subcategory=sweaters-hoodies">Sweaters & Hoodies</a>
-      <a href="category.html?category=clothing&gender=men&subcategory=t-shirts">T-shirts</a>
-      <a href="category.html?category=clothing&gender=men&subcategory=pants">Pants</a>
-      <a href="category.html?category=clothing&gender=men&subcategory=jeans">Jeans</a>
-      <a href="category.html?category=clothing&gender=men&subcategory=shorts">Shorts</a>
-      <a href="category.html?category=clothing&gender=men&subcategory=jackets">Jackets</a>
-      <a href="category.html?category=clothing&gender=men&subcategory=gymwear">Gymwear</a>
-    </div>
-
-    <div class="column">
-      <h4>Women</h4>
-      <a href="category.html?category=clothing&gender=women&subcategory=sweaters-hoodies">Sweaters & Hoodies</a>
-      <a href="category.html?category=clothing&gender=women&subcategory=t-shirts">T-shirts</a>
-      <a href="category.html?category=clothing&gender=women&subcategory=jackets">Jackets</a>
-      <a href="category.html?category=clothing&gender=women&subcategory=dresses">Dresses</a>
-      <a href="category.html?category=clothing&gender=women&subcategory=cardigans">Cardigans</a>
-      <a href="category.html?category=clothing&gender=women&subcategory=pants">Pants</a>
-      <a href="category.html?category=clothing&gender=women&subcategory=jeans">Jeans</a>
-      <a href="category.html?category=clothing&gender=women&subcategory=shorts">Shorts</a>
-      <a href="category.html?category=clothing&gender=women&subcategory=gymwear">Gymwear</a>
-      <a href="category.html?category=clothing&gender=women&subcategory=accessories-beauty">Accessories / Beauty</a>
-    </div>
-
-    <div class="column">
-      <h4>Children</h4>
-      <a href="category.html?category=clothing&gender=children&subcategory=t-shirts">T-shirts</a>
-      <a href="category.html?category=clothing&gender=children&subcategory=pants">Pants</a>
-      <a href="category.html?category=clothing&gender=children&subcategory=sneakers">Sneakers</a>
-    </div>
-  </div>
-
-  <!-- SHOES -->
-  <div class="mega-content" id="shoes">
-    <div class="column">
-      <h4>Men</h4>
-      <a href="category.html?category=shoes&gender=men&subcategory=sneakers">Sneakers</a>
-      <a href="category.html?category=shoes&gender=men&subcategory=boots">Boots</a>
-      <a href="category.html?category=shoes&gender=men&subcategory=sports">Sports</a>
-      <a href="category.html?category=shoes&gender=men&subcategory=casual">Casual</a>
-      <a href="category.html?category=shoes&gender=men&subcategory=business">Business</a>
-    </div>
-
-    <div class="column">
-      <h4>Women</h4>
-      <a href="category.html?category=shoes&gender=women&subcategory=sneakers">Sneakers</a>
-      <a href="category.html?category=shoes&gender=women&subcategory=boots">Boots</a>
-      <a href="category.html?category=shoes&gender=women&subcategory=heels">Heels</a>
-      <a href="category.html?category=shoes&gender=women&subcategory=casual">Casual</a>
-      <a href="category.html?category=shoes&gender=women&subcategory=sports">Sports</a>
-    </div>
-
-    <div class="column">
-      <h4>Children</h4>
-      <a href="category.html?category=shoes&gender=children&subcategory=sneakers">Sneakers</a>
-      <a href="category.html?category=shoes&gender=children&subcategory=boots">Boots</a>
-      <a href="category.html?category=shoes&gender=children&subcategory=sandals">Sandals</a>
-      <a href="category.html?category=shoes&gender=children&subcategory=sports">Sports</a>
-    </div>
-  </div>
-
-  <!-- SUPPLEMENTS -->
-  <div class="mega-content" id="supplements">
-    <div class="column">
-      <h4>Equipment</h4>
-      <a href="category.html?category=supplements&subcategory=electronics">Electronics</a>
-      <a href="category.html?category=supplements&subcategory=sports">Sports</a>
-      <a href="category.html?category=supplements&subcategory=gym">Gym</a>
-      <a href="category.html?category=supplements&subcategory=bags">Bags</a>
-      <a href="category.html?category=supplements&subcategory=home-workout">Home-Workout</a>
-    </div>
-
-    <div class="column">
-      <h4>Supplements</h4>
-      <a href="category.html?category=supplements&subcategory=proteinpowder">Proteinpowder</a>
-      <a href="category.html?category=supplements&subcategory=creatine">Creatine</a>
-      <a href="category.html?category=supplements&subcategory=pwo">PWO</a>
-      <a href="category.html?category=supplements&subcategory=vitamins-minerals">Vitamins / Minerals</a>
-      <a href="category.html?category=supplements&subcategory=proteinbars">Proteinbars</a>
-    </div>
-  </div>
-</div>
-
-  </div> <!-- END NAV WRAP -->
-
-
-  <!-- =====================================
-       FEATURED PRODUCTS
-       ===================================== -->
-  <section class="featured-products">
-    <h2>Utvalgte produkter</h2>
-    <div class="product-grid">
-      <!-- Produkter lastes automatisk fra Google Sheets -->
-    </div>
+  <section class="product-grid-section">
+    <div class="product-grid"></div>
   </section>
 
+  <script src="script-index.js"></script>
 
-  <!-- =====================================
-       SCRIPTS
-       ===================================== -->
-  <script src="script.js"></script>
-<script src="script-favorites.js"></script>
-<script src="script-index.js"></script>
+  <!-- Dynamisk header lasting -->
+  <script>
+  fetch("header.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("header-placeholder").innerHTML = html;
 
+      const loadSequential = async () => {
+        const loadScript = (src) =>
+          new Promise((resolve) => {
+            const s = document.createElement("script");
+            s.src = src;
+            s.onload = resolve;
+            document.body.appendChild(s);
+          });
 
+        await loadScript("script.js");
+        await loadScript("script-favorites.js");
+        if (typeof updateFavoriteCount === "function") updateFavoriteCount();
+        console.log("✅ Header, meny og teller aktivert");
+      };
+
+      loadSequential();
+    })
+    .catch((err) => console.error("❌ Kunne ikke laste header:", err));
+  </script>
 </body>
 </html>
+
 
 
 
