--- a/product.html
+++ b/product.html
@@ -8,15 +8,19 @@
 </head>
 <body>
 
+  <!-- HEADER PLASSHOLDER -->
   <div id="header-placeholder"></div>
 
+  <!-- PRODUKTDETALJER -->
   <section class="product-detail">
     <div class="product-container">
+      <!-- Venstre: bilder -->
       <div class="product-gallery">
         <img id="main-image" class="main-image" src="" alt="Produktbilde" />
         <div class="thumbnails" id="thumbnails"></div>
       </div>
 
+      <!-- Høyre: info -->
       <div class="product-info">
         <a href="#" id="back-btn" class="back-link">← Tilbake</a>
         <h1 id="product-title"></h1>
@@ -31,18 +35,48 @@
     </div>
   </section>
 
+  <!-- PRODUKT-SCRIPT -->
   <script src="product.js"></script>
 
-  <!-- Dynamisk header -->
+  <!-- FAVORITT-FUNKSJONALITET -->
   <script>
-  // Laster felles header, så script.js (mega-meny), så script-favorites.js (teller)
-  fetch("header.html")
-    .then(res => res.text())
-    .then(html => {
-      document.getElementById("header-placeholder").innerHTML = html;
+    document.addEventListener("DOMContentLoaded", () => {
+      const btn = document.getElementById("favorite-btn");
+      const params = new URLSearchParams(window.location.search);
+      const product = Object.fromEntries(params.entries());
 
-      const loadScript = (src) =>
-        new Promise((resolve, reject) => {
+      if (!btn) return;
+
+      const updateButtonState = () => {
+        const favorites = getFavorites();
+        const isFav = favorites.some(fav => fav.title === product.title);
+        btn.textContent = isFav ? "💔 Fjern fra favoritter" : "❤️ Legg til favoritt";
+      };
+
+      btn.addEventListener("click", () => {
+        toggleFavorite(product);
+        updateButtonState();
+      });
+
+      updateButtonState();
+
+      // Tilbake-knapp
+      const backBtn = document.getElementById("back-btn");
+      if (backBtn) backBtn.addEventListener("click", e => {
+        e.preventDefault();
+        window.history.back();
+      });
+    });
+  </script>
+
+  <!-- DYNAMISK HEADER + MEGA-MENY + FAVORITT-TELLER -->
+  <script>
+    fetch("header.html")
+      .then(res => res.text())
+      .then(html => {
+        document.getElementById("header-placeholder").innerHTML = html;
+
+        const loadScript = (src) => new Promise((resolve, reject) => {
           const s = document.createElement("script");
           s.src = src;
           s.onload = resolve;
@@ -50,20 +84,18 @@
           document.body.appendChild(s);
         });
 
-      (async () => {
-        // Viktig: rekkefølge
-        await loadScript("script.js");            // init mega-meny (krever at header er i DOM)
-        await loadScript("script-favorites.js");  // init favoritt-teller (krever #favorite-count)
-
-        // Oppdater teller hvis funksjon finnes
-        if (typeof updateFavoriteCount === "function") updateFavoriteCount();
-        console.log("✅ Header, mega-meny og favoritt-teller aktivert på denne siden");
-      })().catch(e => console.error("❌ Script-load-feil:", e));
-    })
-    .catch(err => console.error("❌ Kunne ikke laste header:", err));
-</script>
+        (async () => {
+          await loadScript("script.js");            // mega-meny
+          await loadScript("script-favorites.js");  // favoritt-teller
+          if (typeof updateFavoriteCount === "function") updateFavoriteCount();
+          console.log("✅ Header, mega-meny og favoritt-teller aktivert på product.html");
+        })().catch(e => console.error("❌ Script-load-feil:", e));
+      })
+      .catch(err => console.error("❌ Kunne ikke laste header:", err));
+  </script>
 </body>
 </html>
+
 
 
 
