--- a/index.html
+++ b/index.html
@@ -4,52 +4,43 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BrandRadar | Oppdag produkter og trender</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="BrandRadar/style.css" />
 </head>
 <body>
 
-  <!-- HEADER -->
   <div id="header-placeholder"></div>
 
-  <!-- FEATURED PRODUCTS -->
+  <!-- PRODUKTGRID -->
   <section class="product-grid-section">
     <div class="product-grid"></div>
   </section>
 
-  <!-- PRODUKTLOADER -->
-  <script src="script-index.js"></script>
+  <script src="BrandRadar/script-index.js"></script>
 
-  <!-- DYNAMISK HEADER + MEGA-MENY + FAVORITT-TELLER -->
+  <!-- Dynamisk header + scripts -->
   <script>
-    fetch("header.html")
+    fetch("BrandRadar/header.html")
       .then(res => res.text())
       .then(html => {
         document.getElementById("header-placeholder").innerHTML = html;
 
-        // Funksjon for trygg dynamisk lasting
         const loadScript = (src) => new Promise((resolve, reject) => {
           const s = document.createElement("script");
-          s.src = src;
-          s.async = true;
+          s.src = `BrandRadar/${src}`;
           s.onload = resolve;
           s.onerror = reject;
           document.body.appendChild(s);
         });
 
         (async () => {
-          // 1️⃣ Mega-meny
           await loadScript("script.js");
-          // 2️⃣ Favorittsystem og teller
           await loadScript("script-favorites.js");
-
-          // 3️⃣ Oppdater teller etter lasting
           if (typeof updateFavoriteCount === "function") updateFavoriteCount();
           console.log("✅ Header, mega-meny og favoritt-teller aktivert på index.html");
         })().catch(e => console.error("❌ Script-load-feil:", e));
       })
       .catch(err => console.error("❌ Kunne ikke laste header:", err));
   </script>
-
 </body>
 </html>
 
