--- a/category.html
+++ b/category.html
@@ -52,6 +52,34 @@
       .catch(err => console.error("❌ Kunne ikke laste header:", err));
   </script>
 
+  <script>
+window.BR_BASE = location.pathname.includes('/BrandRadar/') ? '/BrandRadar/' : '/';
+
+function loadScript(src) {
+  return new Promise((resolve, reject) => {
+    const s = document.createElement('script');
+    s.src = src;
+    s.defer = true;
+    s.onload = resolve;
+    s.onerror = reject;
+    document.body.appendChild(s);
+  });
+}
+
+(async () => {
+  const placeholder = document.getElementById("header-placeholder");
+  if (placeholder) {
+    const res = await fetch(`${BR_BASE}header.html`, { cache: "no-store" });
+    placeholder.innerHTML = await res.text();
+  }
+
+  await loadScript(`${BR_BASE}script.js`);
+  await loadScript(`${BR_BASE}script-favorites.js`);
+
+  if (typeof updateFavoriteCount === "function") updateFavoriteCount();
+})();
+</script>
+
 </body>
 </html>
 
