--- a/index.html
+++ b/index.html
@@ -1,76 +1,23 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BrandRadar | Oppdag produkter og trender</title>
-  <link rel="stylesheet" href="BrandRadar/style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <div id="header-placeholder"></div>
 
-  <!-- PRODUKTGRID -->
   <section class="product-grid-section">
     <div class="product-grid"></div>
   </section>
 
-  <script src="BrandRadar/script-index.js"></script>
-
-  <!-- Dynamisk header + scripts -->
-  <script>
-    fetch("BrandRadar/header.html")
-      .then(res => res.text())
-      .then(html => {
-        document.getElementById("header-placeholder").innerHTML = html;
-
-        const loadScript = (src) => new Promise((resolve, reject) => {
-          const s = document.createElement("script");
-          s.src = `BrandRadar/${src}`;
-          s.onload = resolve;
-          s.onerror = reject;
-          document.body.appendChild(s);
-        });
-
-        (async () => {
-          await loadScript("script.js");
-          await loadScript("script-favorites.js");
-          if (typeof updateFavoriteCount === "function") updateFavoriteCount();
-          console.log("✅ Header, mega-meny og favoritt-teller aktivert på index.html");
-        })().catch(e => console.error("❌ Script-load-feil:", e));
-      })
-      .catch(err => console.error("❌ Kunne ikke laste header:", err));
-  </script>
-  <script>
-window.BR_BASE = location.pathname.includes('/BrandRadar/') ? '/BrandRadar/' : '/';
-
-function loadScript(src) {
-  return new Promise((resolve, reject) => {
-    const s = document.createElement('script');
-    s.src = src;
-    s.defer = true;
-    s.onload = resolve;
-    s.onerror = reject;
-    document.body.appendChild(s);
-  });
-}
-
-(async () => {
-  const placeholder = document.getElementById("header-placeholder");
-  if (placeholder) {
-    const res = await fetch(`${BR_BASE}header.html`, { cache: "no-store" });
-    placeholder.innerHTML = await res.text();
-  }
-
-  await loadScript(`${BR_BASE}script.js`);
-  await loadScript(`${BR_BASE}script-favorites.js`);
-
-  if (typeof updateFavoriteCount === "function") updateFavoriteCount();
-})();
-</script>
-
+  <script src="script-index.js"></script>
+  <script src="dynamic-header-loader.js"></script>
 </body>
 </html>
+
 
 
 
