--- a/news.html
+++ b/news.html
@@ -147,6 +147,7 @@
   <script src="deals.js"></script>
   <script src="picks.js"></script>
   <script src="news.js"></script>
+  <script src="script-favorites.js"></script>
 </body>
 </html>
 
