--- a/brands.html
+++ b/brands.html
@@ -26,6 +26,89 @@
     </div>
   </header>
 
+ <!-- NAV WRAP (ny container) -->
+<div class="nav-wrap">
+  
+  <!-- CATEGORY BAR -->
+  <div class="nav-categories">
+    <ul class="nav-links">
+      <li class="nav-item" data-target="clothing">Clothing</li>
+      <li class="nav-item" data-target="shoes">Shoes</li>
+      <li class="nav-item" data-target="supplements">Supplements</li>
+    </ul>
+  </div>
+
+<!-- MEGA MENU -->
+<div class="mega-menu" id="mega-menu">
+  <!-- CLOTHING -->
+  <div class="mega-content" id="clothing">
+    <div class="column">
+      <h4>Men</h4>
+      <a href="#">Sweaters & Hoodies</a>
+      <a href="#">T-shirts</a>
+      <a href="#">Pants</a>
+      <a href="#">Jeans</a>
+      <a href="#">Jackets</a>
+      <a href="#">Gymwear</a>
+    </div>
+    <div class="column">
+      <h4>Women</h4>
+      <a href="#">Sweaters & Hoodies</a>
+      <a href="#">T-shirts</a>
+      <a href="#">Jackets</a>
+      <a href="#">Dresses</a>
+      <a href="#">Cardigans</a>
+      <a href="#">Gymwear</a>
+    </div>
+    <div class="column">
+      <h4>Children</h4>
+      <a href="#">T-shirts</a>
+      <a href="#">Pants</a>
+      <a href="#">Sneakers</a>
+    </div>
+  </div>
+
+  <!-- SHOES -->
+  <div class="mega-content" id="shoes">
+    <div class="column">
+      <h4>Men</h4>
+      <a href="#">Sneakers</a>
+      <a href="#">Boots</a>
+      <a href="#">Sports</a>
+    </div>
+    <div class="column">
+      <h4>Women</h4>
+      <a href="#">Sneakers</a>
+      <a href="#">Boots</a>
+      <a href="#">Heels</a>
+    </div>
+    <div class="column">
+      <h4>Children</h4>
+      <a href="#">Sneakers</a>
+      <a href="#">Sandals</a>
+    </div>
+  </div>
+
+  <!-- SUPPLEMENTS -->
+  <div class="mega-content" id="supplements">
+    <div class="column">
+      <h4>Equipment</h4>
+      <a href="#">Electronics</a>
+      <a href="#">Sports</a>
+      <a href="#">Bags</a>
+      <a href="#">Home Workouts</a>
+    </div>
+    <div class="column">
+      <h4>Supplements</h4>
+      <a href="#">Proteinpowder</a>
+      <a href="#">Creatine</a>
+      <a href="#">PWO</a>
+      <a href="#">Vitamins</a>
+    </div>
+  </div>
+</div>
+</div>
+  
   <!-- BRAND SEARCH -->
   <section class="brand-search">
     <input type="text" id="brandSearch" placeholder="Søk etter brand..." />
