--- a/favoritter.html
+++ b/favoritter.html
@@ -117,6 +117,7 @@
 
   <script src="script-favorites.js"></script>
   <script src="script-favorites-page.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
 
